nearly done, just missed the filters unfortunately :(

--- a/src/problem5/problem5/simpleCRUD/src/views/items.html
+++ b/src/problem5/problem5/simpleCRUD/src/views/items.html
@@ -74,7 +74,7 @@
               </button>
             </div>
 
-            <div class="edit-view">
+            <div class="edit-view" style="display:none;">
               <div>
                 Name:&nbsp;
                 <input
@@ -109,9 +109,9 @@
         {{/each}}
       </script>
     </div>
+
+    <!-- JS -->
+    <script src="/scripts/http.js"></script>
+    <script src="/scripts/items.js"></script>
   </body>
-
-
-  <script src="scripts/http.js"></script>
-  <script src="scripts/items.js"></script>
 </html>
